@@ -1,5 +1,6 @@
 package org.confluence.lib.client.event;
 
+import PortLib.extensions.net.minecraft.network.chat.MutableComponent.PortMutableComponentExtension;
 import com.mojang.datafixers.util.Either;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
@@ -8,26 +9,26 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.FormattedText;
 import net.minecraft.world.inventory.tooltip.TooltipComponent;
 import net.minecraft.world.item.ItemStack;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.bus.api.EventPriority;
-import net.neoforged.bus.api.SubscribeEvent;
-import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.neoforge.client.event.ClientTickEvent;
-import net.neoforged.neoforge.client.event.RenderTooltipEvent;
-import org.confluence.lib.ConfluenceMagicLib;
 import org.confluence.lib.client.DPSMeter;
 import org.confluence.lib.client.animate.ExpertColorAnimation;
 import org.confluence.lib.client.animate.MasterColorAnimation;
 import org.confluence.lib.common.LibTags;
 import org.confluence.lib.common.component.ModRarity;
+import org.mesdag.portlib.event.PortEventHandler;
+import org.mesdag.portlib.event.PortEventPriority;
+import org.mesdag.portlib.event.client.PortClientTickEvent;
+import org.mesdag.portlib.event.client.PortRenderTooltipEvent;
 
 import java.util.List;
 import java.util.Optional;
 
-@EventBusSubscriber(modid = ConfluenceMagicLib.LIB_ID, value = Dist.CLIENT)
 public final class LibGameEvents {
-    @SubscribeEvent
-    public static void clientTick$Post(ClientTickEvent.Pre event) {
+    public static void init() {
+        PortEventHandler.addListener(LibGameEvents::clientTick);
+        PortEventHandler.addListener(PortEventPriority.HIGHEST, LibGameEvents::renderTooltip);
+    }
+
+    private static void clientTick(PortClientTickEvent.PortPre event) {
         ExpertColorAnimation.INSTANCE.updateColor();
         MasterColorAnimation.INSTANCE.updateColor();
         LocalPlayer player = Minecraft.getInstance().player;
@@ -36,18 +37,17 @@ public final class LibGameEvents {
         }
     }
 
-    @SubscribeEvent(priority = EventPriority.HIGHEST)
-    public static void renderTooltip$GatherComponents(RenderTooltipEvent.GatherComponents event) {
+    private static void renderTooltip(PortRenderTooltipEvent.PortGatherComponents event) {
         ItemStack itemStack = event.getItemStack();
         if (itemStack.isEmpty()) return;
 
         List<Either<FormattedText, TooltipComponent>> tooltipElements = event.getTooltipElements();
         if (tooltipElements.isEmpty()) return;
-        Optional<FormattedText> displayName = tooltipElements.getFirst().left();
+        Optional<FormattedText> displayName = tooltipElements.get(0).left();
         if (displayName.isPresent() && displayName.get() instanceof Component component) {
             ModRarity rarity = ModRarity.getRarity(itemStack);
             if (rarity != null) {
-                tooltipElements.set(0, Either.left(component.copy().withColor(rarity.color())));
+                tooltipElements.set(0, Either.left(PortMutableComponentExtension.withColor(component.copy(), rarity.color())));
             }
         }
 
